# yubot

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: debug_video.py  download_models.py  eval_flow_policy.py  eval_vlm_libero.py  evaluate.py  run_evaluation.py  train_pickandplace.py  verify_grounding_accuracy.py
src/: __init__.py  config.py
src/control/: __init__.py  cartesian_pd.py
src/data/: __init__.py  libero_dataset.py
src/env/: __init__.py  libero_wrapper.py  mock_env.py
src/grounding/: __init__.py  enriched_object.py  ground_truth.py  grounding_prompts.py  grounding_result.py  semantic_grounder.py
src/logging/: __init__.py  episode_logger.py
src/perception/: __init__.py  interface.py  noisy_oracle.py  oracle.py
src/planning/: __init__.py  plan_validator.py  planner_metrics.py  prompts.py  skill_planner.py  skill_schema.py
src/policy/: __init__.py  flow_policy.py  vlm_policy.py
src/skills/: __init__.py  approach.py  base.py  grasp.py  move.py  place.py
src/training/: __init__.py
src/utils/: __init__.py  git_info.py  seeds.py  timing.py  visualization.py
src/vlm/: __init__.py  async_planner.py  prompts.py  qwen_planner.py
src/world_model/: __init__.py  goals.py  state.py
tests/: __init__.py  test_frames.py  test_grounding_offline.py  test_planner_offline.py  test_skills.py  test_spatial_extraction.py
tools/: debug_video.py
training/: __init__.py  config.py  train_pickandplace.py  wandb_logger.py
training/data/: DATA_DISTRIBUTION.md  libero_dataset.py
